test/lambda/negative/syntax/trailing_comma.ls
// @expect-error: E102
// @description: Trailing comma in array is not allowed

let a = [1, 2, 3,]
